--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "production": "npm run build:css && npm run build:html && echo \"Production Build Complete\"",
     "dev": "npm run build:css -- -w & npm run build:html -- -w -P & airship serve & npm run server",
     "server": "browser-sync start --proxy \"localhost:9001\" --files \"./compartments/**/*\"",
-    "build:css": "postcss ./src/css/styles.css --use precss --use autoprefixer --output ./compartments/assets/styles/styles.css",
+    "build:css": "postcss ./src/css/styles.css --use postcss-cssnext --output ./compartments/assets/styles/styles.css",
     "build:html": "pug ./src/compartments --out ./compartments"
   },
   "keywords": [],
@@ -20,7 +20,7 @@
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
     "postcss-cli": "^3.1.1",
-    "precss": "^1.4.0",
+    "postcss-cssnext": "^2.10.0",
     "pug-cli": "^1.0.0-alpha6"
   }
 }
